deploy/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: hello-app
  name: hello-app
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: hello-app
  template:
    metadata:
      labels:
        k8s-app: hello-app
    spec:
      containers:
      - name: hello-app
        imagePullPolicy: "IfNotPresent"
        image: nginxdemos/hello
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 30

      - name: auth-gw
        image: l27.0.0.1:5000/lanerunner/api-gw-service-mesh-token:0.0.1
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /health
            port: 8080
          initialDelaySeconds: 30 
          timeoutSeconds: 30
      serviceAccountName: hello-app

---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: idp-app
  name: idp-app
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: idp-app
  template:
    metadata: 
      labels:
        k8s-app: idp-app
    spec:
      containers:
      - name: idp-app
        image: jboss/keycloak:4.1.0.Final
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idp-db
  labels:
    k8s-app: idp-db
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: idp-db
  template:
    metadata:
      labels:
        k8s-app: idp-db
    spec:
      containers:
        - name: idp-db
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb 
          persistentVolumeClaim:
            claimName: postgres-pv-claim
