deploy/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: hello-app
  name: hello-app
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    k8s-app: hello-app

---

apiVersion: v1
kind: Service
metadata:
  name: idp-db
  labels:
    app: idp-db
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
   app: idp-db

---

apiVersion: v1
kind: Service
metadata:
  name: idp-app
  labels:
    app: idp-app
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
   app: idp-app
